# ocaml_effect_analyzer

./: .gitignore  README.md  dune  effect_analyzer.opam  function_call.ml  ocaml_parse.ml
.github/workflows/: test.yml
graph/: .gitignore  package.json  tsconfig.json  webpack.config.js
graph/src/: elements.json  example.json  index.ts
src/: dune  efName_to_effect_row.ml  effect_analyzer_core.ml  effect_row_to_graph.ml  efname_formatter.ml  function_call.ml  function_call_util.ml  into_local_var.ml  main.ml
test/effect_row/: dune  test1.ml  test15.ml  test2.ml  test3.ml  test4.ml  test5.ml
test/function_call/: dune  test1.ml  test15.ml  test2.ml  test3.ml  test4.ml  test5.ml
test/ocaml_code/: test1.ml  test10.ml  test11.ml  test12.ml  test13.ml  test14.ml  test15.ml  test2.ml  test3.ml  test4.ml  test5.ml  test6.ml  test7.ml  test8.ml  test9.ml
