opam-version: "2.1.4"
maintainer: "example@example.com"
authors: ["Yosuke Yamasaki"]
license: "MIT"
homepage: "https://example.com"
bug-reports: "https://example.com/issues"
dev-repo: "git+https://example.com/repo.git"
build: [
  ["dune" "build"]
]
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.0"}
  "compiler-libs.common" {>= "0.12.0"}
]
synopsis: "A brief description of the function_call package"
description: """
A longer description of the function_call package that can
span multiple lines.
"""