(executable
  (name main)
  (modules main)
  (libraries compiler-libs.common effect_analyzer.function_call)
)

(library
 (name function_call)
 (modules function_call effect_analyzer_core efname_formatter function_call_util efName_to_effect_row typedtree_formatter into_local_var)
 (public_name effect_analyzer.function_call)
 (libraries compiler-libs.common))

(env
  (dev
    (flags (:standard -warn-error -a)))
)

